AksDeploy/db1_node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata1
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata1
          persistentVolumeClaim:
            claimName: pgdata1-pvc
