AksDeploy/db2_python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
spec:
  selector:
    matchLabels:
      app: db2
  replicas: 1
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata2
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata2
          persistentVolumeClaim:
            claimName: pgdata2-pvc
