AksDeploy/service_python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python
          image: djgitdev/service_python:v1
          ports:
            - containerPort: 7001
