AksDeploy/service_db1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db1
spec:
  type: ClusterIP
  selector:
    app: db1
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
