AksDeploy/service_db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2
spec:
  type: ClusterIP
  selector:
    app: db2
  ports:
    - name: postgres
      port: 5433
      targetPort: 5432
