AksDeploy/service_node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
