AksDeploy/service_python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001
  type: ClusterIP
