AksDeploy/Proxy_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 3000
      - path: /node-service/
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-service
            port: 
              number: 7000
      - path: /python-service/
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-service
            port: 
              number: 7001
